# xfetch

./: .gitignore  README.md  marketplace.json  mcp_server.py  pyproject.toml
.claude-plugin/: plugin.json
agents/: x-reader-pipeline.md
docs/: README.md  operational-routing.md
docs/archive/plans/: 2026-03-31-x-fetcher-executor-brief.md  2026-04-01-xfetch-git-publish-pages-plan.md
docs/plans/: 2026-02-23-mlx-whisper-mcp-setup.md  2026-03-31-x-fetcher-content-pipeline-plan.md  2026-03-31-x-fetcher-executor-brief.md  2026-04-03-xfetch-replace-x-reader-plan.md
hooks/: detect-urls.sh  hooks.json
scripts/: setup-telegram-bot  telegram-bot-service.sh  upload_archive.py
skills/upload/: SKILL.md
tasks/: lessons.md
tests/: test_cli.py  test_connector_registry.py  test_fxtwitter.py  test_git_publish.py  test_publishing.py  test_render.py  test_render_article_fallback.py  test_telegram_bot.py  test_telegram_connector.py  test_telegram_setup.py  test_x_connector.py
tests/fixtures/: fxtwitter_single_tweet.json
x_reader/: reader.py  schema.py
x_reader/fetchers/: camofox_client.py  ocr.py  twitter.py  whisper.py  youtube.py
x_reader/utils/: storage.py
xfetch/: cli.py  config.py  telegram_bot.py  telegram_setup.py
xfetch/backends/: fxtwitter.py
xfetch/connectors/: base.py  registry.py  telegram.py  x.py
xfetch/publishing/: base.py  github_repo_sync.py  url.py
xfetch/storage/: render.py
