[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x-tweet-fetcher"
version = "0.1.0"
description = "Portable content-ingestion runtime for X and related sources"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
telegram-bot = ["python-telegram-bot>=21.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
